# mge

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: bgfxToolUtils.cmake
cmake/bx/: CMakeLists.txt  bx.cmake
cmake/modules/: FindMaya.cmake
cmake/vr/: CMakeLists.txt  vr.cmake
cmake/vulkan-renderer/: CMakeLists.txt  samples.cmake  vulkan-renderer.cmake
include/mge/: defines.h  mge.h
include/mge/engine/: camera.h  component.h  entity.h  environment.h  material.h  math.h  mesh.h  object.h  renderer.h  sampledata.h  scene.h  settings.h  texture.h  vertex.h  window.h  world.h
include/mge/engine/components/: camera_fly_component.h  mesh_component.h
include/mge/engine/entities/: model.h
include/mge/engine/inline/: object.inl  world.inl
include/mge/engine/objects/: model.h  scene.h
include/vulkan-renderer/: cmd.h  defines.h  entry.h  input.h  renderer.h  vulkan-renderer.h
include/vulkan-renderer/engine/: camera.h  component.h  entity.h  eventqueue_noop.h  eventqueue_win32.h  material.h  math.h  mesh.h  model.h  renderer.h  sampledata.h  scene.h  state.h  texture.h  vertex.h  window.h  window_noop.h  window_win32.h  windowdesc.h  world.h
include/vulkan-renderer/engine/components/: camera_fly_component.h  mesh_component.h
include/vulkan-renderer/engine/entities/: model.h
include/vulkan-renderer/entry/: CrossWindow.h
platform/: main_noop.cpp  main_win32.cpp
samples/00-sponza/: main.cpp
src/: mge.cpp  mge_p.h  vulkan-renderer.cpp  vulkan-renderer_p.h
src/components/: camera_fly_component.cpp  mesh_component.cpp
src/engine/: camera.cpp  component.cpp  math.cpp  object.cpp  sampledata.cpp  settings.cpp  window.cpp  world.cpp
src/entity/: camera.cpp  camera.h
src/entry/: Event.cpp  Event.h  Init.cpp  Init.h  WindowDesc.h  cmd.cpp  entry.cpp  entry_p.h  entry_windows.cpp  eventqueue_noop.cpp  eventqueue_win32.cpp  input.cpp  window_noop.cpp  window_win32.cpp
src/entry-noop/: eventqueue_noop.h  window_noop.cpp
src/entry-win32/: eventqueue_win32.cpp  eventqueue_win32.h  window_win32.cpp  window_win32.h
src/entry/Common/: Event.cpp  Event.h  EventQueue.h  Init.h  State.h  Window.h  WindowDesc.h
src/entry/Main/: Main.h  NoopMain.cpp  Win32Main.cpp
src/entry/Noop/: NoopEventQueue.cpp  NoopWindow.h
src/entry/Win32/: Win32EventQueue.cpp  Win32EventQueue.h  Win32Main.cpp  Win32Window.cpp  Win32Window.h
src/game/: camera.cpp  camera.h  camera_fly_component.cpp  component.cpp  entity.cpp  model.cpp
src/math/: math.cpp  math.h
src/objects/: model.cpp  scene.cpp
src/renderer/: bgfx_utils.cpp  bgfx_utils.h  common_resources.cpp  common_resources.h  framebuffer.cpp  framebuffer.h  gbuffer.cpp  gbuffer.h  imgui.cpp  imgui.h  material.cpp  mesh.cpp  renderer.cpp  renderer.h  samplers.h  texture.cpp  tonemapping.cpp  tonemapping.h  uniforms.h  vertex.cpp  vertexpos.cpp  vertexpos.h  vertexpostex.cpp  vertexpostex.h
src/renderer/imgui/: imgui.cpp  imgui.h  roboto_regular.ttf.h
src/renderer/shaders/: deferred.h  fs_deferred.sc  fs_geometry.sc  fs_light_ambient.sc  fs_light_directional.sc  fs_shadowmap.sc  fs_skybox.sc  fs_tonemap.sc  geometry.h  light_ambient.h  light_directional.h  shadowmap.h  skybox.h  tonemap.h  varying.def.sc  vs_deferred.sc  vs_geometry.sc  vs_light_ambient.sc  vs_light_directional.sc  vs_shadowmap.sc  vs_skybox.sc  vs_tonemap.sc
src/renderer/shaders/common/: lights.sh  pbr.sh  samplers.sh  util.sh
src/renderer/shaders/dx11/: fs_deferred.sc.bin.h  fs_tonemap.sc.bin.h  vs_deferred.sc.bin.h  vs_tonemap.sc.bin.h
src/renderer/shaders/essl/: fs_deferred.sc.bin.h  fs_tonemap.sc.bin.h  vs_deferred.sc.bin.h  vs_tonemap.sc.bin.h
src/renderer/shaders/glsl/: fs_deferred.sc.bin.h  fs_tonemap.sc.bin.h  vs_deferred.sc.bin.h  vs_tonemap.sc.bin.h
src/renderer/shaders/spirv/: fs_deferred.sc.bin.h  fs_tonemap.sc.bin.h  vs_deferred.sc.bin.h  vs_tonemap.sc.bin.h
src/renderer/systems/: deferred.cpp  deferred.h  gbuffer.cpp  gbuffer.h  imgui.cpp  imgui.h  shadow_mapping.cpp  shadow_mapping.h  skybox.cpp  skybox.h  tone_mapping.cpp  tone_mapping.h
src/scene/: scene.cpp
src/window/: window.cpp
src/world/: world.cpp  world.h
vulkan-renderer/entry/: cmd.cpp  entry.cpp  entry_noop.cpp  entry_p.h  input.cpp
vulkan-renderer/renderer/: renderer.cpp
